# FastAPI_LLMops_demo

./: README.md
customer_suport/: pyproject.toml
customer_suport/src/customer_suport/backend/: agents.py  api.py  constants.py
customer_suport/src/customer_suport/frontend/: app.py
customer_suport/src/customer_suport/monitoring/: mlflow.db  mlflow_monitoring.ipynb  mlflow_prompts.ipynb
customer_suport/src/customer_support/backend/: agents.py  api.py
customer_suport/src/customer_support/monitoring/: mlflow.db  mlflow_monitoring.ipynb
customer_support/src/customer_support/: __init__.py
customer_support/src/customer_support/backend/: constants.py
customer_support/src/customer_support/monitoring/: mlflow.db  mlflow_prompts.ipynb
