[project]
name = "customer-suport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LAjoyan", email = "ajoyan.lilit@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
customer-suport = "customer_suport:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"
