[project]
name = "customer-suport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LAjoyan", email = "ajoyan.lilit@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "mlflow>=3.11.1",
    "pydantic-ai>=1.84.1",
    "streamlit>=1.56.0",
]

[project.scripts]
customer-suport = "customer_suport:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"
